chore: finish 04 and 05

--- a/04 - Array Cardio Day 1/index-JP-FINISH.html
+++ b/04 - Array Cardio Day 1/index-JP-FINISH.html
@@ -88,10 +88,12 @@
       // 8. Reduce Exercise
       // Sum up the instances of each of these
       const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
-      console.table(data.reduce((memo, item) => {
-        memo[item] ? memo[item]++ : memo[item] = 1
-        return memo
-      }, {}));
+      console.table(
+        data.reduce((memo, item) => {
+          memo[item] ? memo[item]++ : memo[item] = 1
+          return memo
+        }, {})
+      );
     </script>
   </body>
 
