--- a/10 - Hold Shift and Check Checkboxes/index-JP-FINISH.html
+++ b/10 - Hold Shift and Check Checkboxes/index-JP-FINISH.html
@@ -117,7 +117,7 @@
         lastChecked = this
       }
 
-      checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck))
+      checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
 
     </script>
   </body>
