--- a/29 - Countdown Timer/index.html
+++ b/29 - Countdown Timer/index.html
@@ -24,6 +24,6 @@
     </div>
   </div>
 
-  <script src="scripts-START.js"></script>
+  <script src="scripts-JP-FINISH.js"></script>
 </body>
 </html>
